Adjusted font colors

--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -23,7 +23,7 @@ search:
 
 panel:
   lastmod: Recently Updated
-  trending_tags: Tags you might be interested
+  trending_tags: You might be interested in
   toc: Contents
 
 copyright:
