Sauna Writeup added

--- a/_posts/HackTheBox/2024-08-30-Nest.md
+++ b/_posts/HackTheBox/2024-08-30-Nest.md
@@ -1,6 +1,6 @@
 ---
 title: "HTB: Nest Writeup"
-description: "In this post we're resolving Nest machine from HTB, this is cataloged as an easy Windows box where SMB guest access leads to low-privileged credentials. Dive into configuration files for sensitive info, uncover a password through source code analysis, and decrypt Administrator credentials by enumerating a custom service."
+description: "In this post we're resolving Nest machine from HackTheBox, this is cataloged as an easy Windows box where SMB guest access leads to low-privileged credentials. Dive into configuration files for sensitive info, uncover a password through source code analysis, and decrypt Administrator credentials by enumerating a custom service."
 date: 2024-09-03 12:00:00 +0
 categories: [HackTheBox, CTF]
 tags:
