CheatSheet: net Command

--- a/_posts/HackTheBox/2024-09-16-Builder.md
+++ b/_posts/HackTheBox/2024-09-16-Builder.md
@@ -46,7 +46,7 @@ Builder is a medium-difficulty Linux machine that features a Jenkins instance. T
 
 ### **Nmap**
 
-As always, we start by enumerating services with Nmap. We need to find out what services the is machine exposing, so let's scan for open ports, service versions and run some default Nmap scripts.
+As always, we start by enumerating services with Nmap. We need to find out what services is the machine exposing, so let's scan for open ports, service versions and run some default Nmap scripts.
 
 ![img_1](/assets/img/HackTheBox/Builder/img_1.png)
 
@@ -54,7 +54,6 @@ We can see two ports open, `SSH` and a `HTTP` server running on port 8080. Based
 
 ### **Jenkins**
 
-Jenkins is a open source server build in Java.
 Jenkins is an automation tool mainly used to implement CI/CD in software projects. It allows development teams to automate repetitive tasks such as building, testing, and deployment.
 
 ![img_2](/assets/img/HackTheBox/Builder/img_2.png)
